# skypro_project_django

./: .env_sample  .gitignore  README.md  products.json  pyproject.toml  requirements.txt
blogs/: admin.py  forms.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_alter_blogpost_content_alter_blogpost_preview_image_and_more.py  0003_alter_blogpost_publication_sign.py  0004_alter_blogpost_count_views.py
blogs/templates/blogs/: base.html  blog_card.html  blog_create.html  blog_delete.html  blog_detail.html  blog_list.html  footer.html  header.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py  create_groups.py
catalog/migrations/: 0001_initial.py  0002_contact_contactinfo_alter_product_image.py  0003_contact_message_alter_product_image.py  0004_alter_product_options_product_status.py  0005_alter_product_options_product_owner.py
catalog/templates/: base.html  contacts.html  header.html  home.html
catalog/templates/catalog/: add_product.html  base.html  contacts.html  header.html  product_card.html  product_category_list.html  product_delete.html  product_detail.html  product_list.html  product_update.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html
