[tool.poetry]
name = "skypro-project-django"
version = "0.1.0"
description = ""
authors = ["maksim <m.merkulovdodo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
black = "^25.1.0"
pillow = "^11.1.0"
ipython = "^8.32.0"
certifi = "^2025.1.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
